--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
     "watch:sassprefixer": "onchange -d 100 sass/*.* sass/components/*.* sass/pages/*.* sass/sections/*.* -- npm-run-all build-dev:sass build:autoprefixer",
     "watch:browsersync": "browser-sync start --server --files css/*.css *.html js/*.js",
-    "watch": "npm-run-all build -p watch:*"
+    "watch": "npm-run-all build -p watch:*",
+    "start": "http-server"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.3",
     "globstar": "^1.0.0",
+    "http-server": "^0.11.1",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "nu-html-checker": "^0.1.0",
